--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "askerakbar/gpt-trix-editor": "^2.0",
         "filament/filament": "3.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
